# TestWar

./: CMakeLists.txt  CMakePresets.json
ProjectFiles/: main.cpp
ProjectFiles/GridWalker/: Coordinate.cpp  Coordinate.hpp  Direction.hpp  Grid.cpp  Grid.hpp  GridWalker.cpp  GridWalker.hpp  GridWalkerCRTP.cpp  GridWalkerCRTP.hpp  GridWalkerLib.cpp  GridWalkerLib.hpp  Path.cpp  Path.hpp
ProjectFiles/Recursion/: DecimalToBinary.cpp  DecimalToBinary.hpp
ProjectFiles/Timer/: MeasureExecutionTimer.cpp  MeasureExecutionTimer.hpp
