#GENERAL PROJECT
cmake_minimum_required(VERSION 3.2.0)

set(TARGET_NAME TestWar)

project ( ${TARGET_NAME} VERSION 0.0.0 LANGUAGES CXX)
#

#SOURCE_FILES
set(PROJECT_FILES_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ProjectFiles)
set(GRIDWALKER_FILES_DIRECTORY GridWalker)
set(TIMER_FILES_DIRECTORY Timer)
set(RECURSION_DIRECTORY Recursion)
set(PROJECT_SOURCE_FILES
    ${PROJECT_FILES_DIRECTORY}/main.cpp

    ${PROJECT_FILES_DIRECTORY}/${GRIDWALKER_FILES_DIRECTORY}/Coordinate.cpp
    ${PROJECT_FILES_DIRECTORY}/${GRIDWALKER_FILES_DIRECTORY}/Grid.cpp
    ${PROJECT_FILES_DIRECTORY}/${GRIDWALKER_FILES_DIRECTORY}/GridWalker.cpp
    ${PROJECT_FILES_DIRECTORY}/${GRIDWALKER_FILES_DIRECTORY}/Path.cpp

    ${PROJECT_FILES_DIRECTORY}/${TIMER_FILES_DIRECTORY}/MeasureExecutionTimer.cpp

    ${PROJECT_FILES_DIRECTORY}/${RECURSION_DIRECTORY}/DecimalToBinary.cpp
)

#

#EXECUTABLE
add_executable( ${TARGET_NAME} ${PROJECT_SOURCE_FILES})
#

#TELL COMPILER WHERE TO LOOK IN CASE NOT MATCHING WITH PROJECT_FILES_DIRECTORY
target_include_directories(${TARGET_NAME} PRIVATE ${PROJECT_FILES_DIRECTORY})
#

#COMPILER FLAGS
target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-volatile)

target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
#

#CPP20 FEATURES
set_property(TARGET ${TARGET_NAME} PROPERTY 
    CXX_STANDARD 20
    CXX_STANDARD_REQUIRED TRUE
    CXX_EXTENSIONS FALSE)
#

#PRIVATE Because it is only for this project nothing that links to it should adopt any of it